Fixed overflow property

--- a/src/components/type-chart/type-chart.module.scss
+++ b/src/components/type-chart/type-chart.module.scss
@@ -13,7 +13,7 @@
 .typeChart {
     display: block;
     position: relative;
-    overflow: scroll;
+    overflow: auto;
     max-width: 100vw;
 
     @media screen and (max-width: 1080px) {
